test/testdata/syntax_error/unterminated_comment.lox
// errors
// testdata/syntax_error/unterminated_comment.lox:5:1: syntax error: unterminated multi-line comment
// /*
// ^^
/*
 * Unterminated comment
print "this won't be printed";
